@@ -1,29 +1,3 @@
-- large and puzzling performance regression cf. 7.18 on the benchmark
-
-  7.18
-	$ time ./vips.py wtc_tiled_small.tif wtc2.tif
-	vips warning: im_conv: 6534 overflows and 13439 underflows detected
-	real	0m1.891s
-	user	0m3.110s
-	sys	0m0.320s
-
-  7.20 (and 7.22)
-
-	$ time ./vips.py wtc_tiled_small.tif wtc2.tif
-	vips warning: im_conv: 6502 overflows and 13429 underflows detected
-	real	0m2.962s
-	user	0m4.950s
-	sys	0m0.250s
-
-  and why are the conv numbers different?
-
-  seems to be a difference in the bilinear interpolator? we did increase
-  accuracy in 7.18 -> 7.20
-
-  I suppose conv must have changed too?
-
-
-
 - use D65 in cmsCreateLab4Profile() ? not sure
 
 - VImage("poop.v") should use "rd" as well? Python too?
