@@ -851,11 +851,6 @@ vips_interpolate_lbb_class_init( VipsInterpolateLbbClass *klass )
 
   interpolate_class->interpolate   = vips_interpolate_lbb_interpolate;
   interpolate_class->window_size   = 4;
-  interpolate_class->window_offset = 2;
-  /*
-   * Note from nicolas: If things were sane, window_offset should be
-   * 1, not 2.
-   */
 }
 
 static void
